--- a/BLS_Data_postget.ipynb
+++ b/BLS_Data_postget.ipynb
@@ -23,7 +23,9 @@
     "   - Generating scatter plots with appropriate axis labels, titles, and limits for clarity.\n",
     "\n",
     "### Purpose:\n",
-    "To provide a clear and concise visualization of data points over time, enabling better analysis and interpretation of trends.\n"
+    "To provide a clear and concise visualization of data points over time, enabling better analysis and interpretation of trends.\n",
+    "### Plot:\n",
+    "![Values Over Time](LookWhatICanDo.png)\n"
    ]
   },
   {
