--- a/BLS_Data_postget.ipynb
+++ b/BLS_Data_postget.ipynb
@@ -11,7 +11,7 @@
     "**Date**: October 2, 2024  \n",
     "\n",
     "### Description:\n",
-    "This script is designed to visualize data trends over time using Python libraries such as Pandas and Matplotlib. The process includes:\n",
+    "This script is designed to get statistics from U.S. Bureau of Labor Statistics API (www.bls.gov) and to visualize data trends over time using Python libraries such as Pandas and Matplotlib. The process includes:\n",
     "\n",
     "1. **Importing Necessary Libraries**: To handle data manipulation and visualization.\n",
     "2. **Defining the Data**: A sample DataFrame containing Year, Month, and Value columns.\n",
